--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@nlpjs/basic": "^4.23.5",
     "@slack/bolt": "^3.11.0",
+    "mongodb": "^4.6.0",
     "wakeonlan": "^0.1.0"
   },
   "devDependencies": {
